--- a/sass/components/_new-menu.scss
+++ b/sass/components/_new-menu.scss
@@ -270,7 +270,7 @@
   display: none;
   top: 100%;
   left: 0;
-  z-index: 1;
+  z-index: 1000;
   width: auto;
   max-width: 100vw;
   background: var(--lightest-color);
